--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="crousel">
         <div class="content white">
             <h6 class="pt-1 pb-1 fs-1 roboto">ANYBODY CAN LEARN CODING</h6>
-            <h1 class="pt-1 pb-2 open-sans">Complete Course For<span class="indigo"> Full-Stack </span> Web Developer</h1>
+            <h1 class="pt-1 pb-1 open-sans">Complete Course For<span class="indigo"> Full-Stack </span> Web Developer</h1>
             <p class="crousel-p pb-1 roboto pb-2">The quick brown fox jumps over to the little lazy dog. The quick brown fox
                 jumps over to the little lazy
                 dog. The quick brown fox jumps over to the little lazy dog. The quick brown fox jumps over to the little
@@ -59,9 +59,9 @@
         </div>
     </div>
     <!--       section-2      about-us section         -->
-    <div id="about" class="about mt-100">
+    <div id="about" class="about">
         <div class="h-box">
-            <div class="heading open-sans fs-3 pb-1">ABOUT US</div>
+            <div class="heading open-sans pb-1">ABOUT US</div>
             <div class="underline"></div>
         </div>
         <div class="content d-f mt-4">
@@ -108,7 +108,7 @@
         </div>
     </div>
     <!--           avilable courses            -->
-    <div id="our-courses" class="our-services mt-100">
+    <div id="our-courses" class="our-services">
         <div class="h-box ml-6">
             <div class="heading open-sans fs-3 pb-1">AVAILABLE COURSES</div>
             <div class="underline"></div>
@@ -212,7 +212,7 @@
         </div>
     </div>
     <!--    our team member   -->
-    <div id="our-member" class="our-member mt-100">
+    <div id="our-member" class="our-member">
         <div class="h-box ml-6 pb-4">
             <div class="heading open-sans fs-3 pb-1">OUR MEMBER</div>
             <div class="underline"></div>
@@ -285,7 +285,7 @@
         </div>
     </div>
     <!--    our video    -->
-    <div id="our-video" class="video-tutorial mt-100 pt-3">
+    <!-- <div id="our-video" class="video-tutorial mt-100 pt-3">
         <div class="h-box ml-6 pb-4">
             <div class="heading open-sans fs-3 pb-1">VIDEO TUTORIAL</div>
             <div class="underline"></div>
@@ -383,7 +383,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--            popular courses     -->
     <div class="popular-courses mt-100">
         <div class="h-box ml-6 pb-4">
@@ -516,7 +516,7 @@
             All Copyright &copy; reserved | 2010 - 2025 LOGO
         </div>
     </div>
-    <script src="javascript.js"></script>
+    <script src="./javascript.js"></script>
 </body>
 
 </html>
