--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             <h1 class="pt-1 pb-1 open-sans">Complete Course For<span class="indigo"> Full-Stack </span> Web Developer</h1>
             <p class="crousel-p pb-1 roboto pb-2">The quick brown fox jumps over to the little lazy dog. The quick brown fox
                 jumps over to the little lazy
-                dog. The quick brown fox jumps over to the little lazy dog. The quick brown fox jumps over to the little
-                lazy dog.</p>
+                dog. The quick brown fox jumps over to the little lazy dog.</p>
             <button class="btn btn-get-inroll roboto white">GET INROLL &nbsp;&nbsp;<i
                     class="fa-solid fa-arrow-right-long"></i></button>
         </div>
