--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
     </div>
     <!--    our video    -->
-    <!-- <div id="our-video" class="video-tutorial mt-100 pt-3">
+    < <div id="our-video" class="video-tutorial mt-100 pt-3">
         <div class="h-box ml-6 pb-4">
             <div class="heading open-sans fs-3 pb-1">VIDEO TUTORIAL</div>
             <div class="underline"></div>
@@ -382,7 +382,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!--            popular courses     -->
     <div class="popular-courses mt-100">
         <div class="h-box ml-6 pb-4">
